<resources>
    <string name="app_name">MiraCosta Staff Directory</string>
    <string name="home">Home</string>
    <string name="departments">Departments</string>
    <string name="all_staff">All Staff</string>
    <string name="name">Name:</string>
    <string name="title">Department:</string>
    <string name="extension">Phone Extension:</string>
    <string name="room">Room Number:</string>
    <string name="email">Email:</string>
    <string name="search">Search: </string>
    <string name="WelcomeMessage">Welcome to the MiraCosta Staff Directory</string>
    <string name="oc">Oceanside</string>
    <string name="se">San Elijo</string>
    <string name="map">Campus Maps</string>
    <string name="clc">Community Learning Center</string>


    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
</resources>
