<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SingleStaffAct">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/HomeTextView"
            android:layout_width="350dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/home"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/DepartmentsTextView"
            android:layout_width="350dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/departments"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/AllStaffTextView"
            android:layout_width="350dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/all_staff"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Name"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Title"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/departments" />

            <TextView
                android:id="@+id/departmentsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Extension"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/extension" />

            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Room"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/room" />

            <TextView
                android:id="@+id/roomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Email"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoLink="email"
                android:text="Test@gmail.com"
                android:textColorLink="#0000FF	" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>